# bolt-payment-gateway

./: README.md
bolt-payment-gateway-server/: .dockerignore  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.debug  README.md  openapi.yaml  publish.sh
bolt-payment-gateway-server/kubernetes/: backconfig.yaml  deploy.yaml
bolt-payment-gateway-server/src/: main.rs
bolt-payment-gateway-server/src/api/: mod.rs
bolt-payment-gateway-server/src/api/v1/: mod.rs  routes.rs
bolt-payment-gateway-server/src/database/: mod.rs  mongodb.rs
bolt-payment-gateway-server/src/database/repositories/: invoice_repository.rs  mod.rs  payment_repository.rs
bolt-payment-gateway-server/src/entities/: invoice.rs  payment.rs
bolt-payment-gateway-server/src/handlers/: handler_invoices.rs  invoices_handler.rs  mod.rs  payments_handler.rs  quotes_handler.rs
bolt-payment-gateway-server/src/models/: dto.rs  invoice.rs  mod.rs  payment.rs
bolt-payment-gateway-server/src/services/: bolt_protocol_service.rs  mod.rs  quote_service.rs
bolt-payment-gateway-server/src/shared/: util.rs
bolt-payment-gateway-ux/: .gitignore  GATEWAY_SERVICE_USAGE.md  README.md  angular.json  package-lock.json  package.json
bolt-payment-gateway-ux/public/assets/images/: bolt-hero.png.base64
bolt-payment-gateway-ux/src/: index.html  styles.scss
bolt-payment-gateway-ux/src/app/: app.routes.ts  app.spec.ts  app.ts
bolt-payment-gateway-ux/src/app/guards/: wallet.guard.ts
bolt-payment-gateway-ux/src/environments/: environment.development.ts  environment.ts
(+20 files in other folders)
