[package]
name = "bolt-payment-gateway-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
mongodb = "3.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.0", features = ["chrono-0_4"] }
futures = "0.3"